website/versioned_docs/version-2.13.x/reference/subsystems/google-java-format.mdx
---
title: google-java-format
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Google Java Format (https://github.com/google/google-java-format)

Backend: <span className="color--primary">`pants.backend.experimental.java.lint.google_java_format`</span>

Config section: <span className="color--primary">`[google-java-format]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]google-java-format-skip`}
  env_repr="PANTS_GOOGLE_JAVA_FORMAT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Google Java Format when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `aosp`

<Option
  cli_repr={`--[no-]google-java-format-aosp`}
  env_repr="PANTS_GOOGLE_JAVA_FORMAT_AOSP"
  default_repr={`False`}
>
  Use AOSP style instead of Google Style (4-space indentation).
  (&quot;AOSP&quot; is the Android Open Source Project.)
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--google-java-format-version=<str>`}
  env_repr="PANTS_GOOGLE_JAVA_FORMAT_VERSION"
  default_repr={`1.13.0`}
>
  Version string for the tool. This is available for substitution in the
  `[google-java-format].artifacts` option by including the string `{version}`.
</Option>

### `artifacts`

<Option
  cli_repr={`--google-java-format-artifacts="['<str>', '<str>', ...]"`}
  env_repr="PANTS_GOOGLE_JAVA_FORMAT_ARTIFACTS"
  default_repr={`["com.google.googlejavaformat:google-java-format:{version}"]`}
>
  Artifact requirements for this tool using specified as either the address of a
  `jvm_artifact` target or, alternatively, as a colon-separated Maven
  coordinates (e.g., group:name:version). For Maven coordinates, the string `
  {version}` version will be substituted with the value of the
  `[google-java-format].version` option.
</Option>

### `lockfile`

<Option
  cli_repr={`--google-java-format-lockfile=<str>`}
  env_repr='PANTS_GOOGLE_JAVA_FORMAT_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.13.1/src/python/pants/backend/java/lint/google_java_format/google_java_format.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 jvm-generate-lockfiles --resolve=google-java-format`.

</Option>

### `jvm_options`

<Option
  cli_repr={`--google-java-format-jvm-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_GOOGLE_JAVA_FORMAT_JVM_OPTIONS'
  default_repr={`[]`}
>
List of JVM options to pass to `google-java-format` JVM processes.

Options set here will be added to those set in `[jvm].global_options`. Please check the documentation for the `jvm` subsystem to see what values are accepted here.

</Option>

## Deprecated options

None

</span>

